--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,11 @@
 {
-  "dependencies": {
+  "name": "fyp-backend-app",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "node index.js",
+        "build": "node build.js"
+    },
+    "dependencies": {
     "@stream-io/node-sdk": "^0.1.2",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
